Fix vertical scroll on small heights

--- a/src/components/home/weatherTable.less
+++ b/src/components/home/weatherTable.less
@@ -3,7 +3,7 @@
 .weatherTable {
     border-collapse: separate;
     border-spacing: 0 5px;
-    margin-bottom: 100px !important;
+    margin-bottom: 60px !important;
     border: none !important;
     font-family: 'Noto Sans', sans-serif;
 
