--- a/src/containers/homePage.less
+++ b/src/containers/homePage.less
@@ -8,10 +8,6 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-           
-    @media only screen and (max-height: 700px) {
-        margin-bottom: 100px;
-    }
 
     .homeSearch {
         margin-top: 60px;
